search improvements, shared preferences

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ResultadoBuscaActivity"
+            android:name=".SearchResultActivity"
             android:label="@string/title_activity_search_results"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".FilmeActivity"
+            android:name=".MovieActivity"
             android:label="@string/title_activity_movie_activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".FirstActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_first"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
