--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.leonardoserra.watchlist">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -10,6 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--
         <activity
             android:name=".SearchResultActivity"
             android:label="@string/title_activity_search_results"
@@ -18,6 +20,7 @@
             android:name=".MovieActivity"
             android:label="@string/title_activity_movie_activity"
             android:theme="@style/AppTheme.NoActionBar" />
+            -->
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_first"
