--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <!--
         <activity
             android:name=".SearchResultActivity"
@@ -20,7 +21,7 @@
             android:name=".MovieActivity"
             android:label="@string/title_activity_movie_activity"
             android:theme="@style/AppTheme.NoActionBar" />
-            -->
+        -->
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_first"
@@ -39,6 +40,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <activity
+            android:name=".TesteAbaHomeActivity"
+            android:label="@string/title_activity_teste_aba_home"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
