--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_first"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,7 +31,8 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".ResultadoBuscaActivity" />
-        <activity android:name=".Filme2Activity"></activity>
+        <activity android:name=".Filme2Activity" />
+        <activity android:name=".MyListtActivity"></activity>
     </application>
 
 </manifest>
