--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -30,9 +30,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".ResultadoBuscaActivity" />
-        <activity android:name=".FilmeActivity" />
-        <activity android:name=".MyListtActivity"></activity>
+        <activity android:name=".Activities.ResultadoBuscaActivity" />
+        <activity android:name=".Activities.FilmeActivity" />
+        <activity android:name=".Activities.MyListtActivity"></activity>
     </application>
 
 </manifest>
