--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.leonardoserra.watchlist"
-    android:versionCode="1"
-    android:versionName="1.0.0">
+    package="com.leonardoserra.watchlist">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
 
@@ -32,11 +34,7 @@
 
         <activity android:name=".Activities.ResultadoBuscaActivity" />
         <activity android:name=".Activities.FilmeActivity" />
-        <activity android:name=".Activities.MyListtActivity"></activity>
+        <activity android:name=".Activities.MyListtActivity"/>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 </manifest>
